public/style.css
@font-face {
  font-family: 'Paloseco';
  src: url('./src/paloseco/paloseco-light.ttf') format('truetype');
  font-weight: lighter;
  font-style: normal;
}

@font-face {
  font-family: 'Paloseco';
  src: url('./src/paloseco/paloseco-medium.ttf') format('truetype');
  font-weight: medium;
  font-style: normal;
}

body {
  font-family: 'Paloseco';
  margin: 0;
  padding: 0;
}

body::-webkit-scrollbar {
  -webkit-appearance: none;
}

a:link {
  text-decoration: none;
}

svg {
  margin-right: 1.2em;
}

button:focus {
  outline:0;
}

button:hover {
  box-shadow: 0px 0px 6px #db651c;
}

#steppr {
  background-size: 18em;
  background-image: url('./src/steppr_black.png');
}

#sockr {
  background-image: url('https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX9878837.jpg');
}

#jamspace {
  background-image: url('https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/467064/1160/772/m1/fpnw/wm1/i0435-.jpg?1430378113&s=49e6a55f98b02e938593beadf51f7a9b');
}

#steppr-modal {
  outline: 20em solid #db651c;
  background-image-size: 300px;
  background-image: url('./src/steppr_black.png');
}

#sockr-modal {
  outline: 20em solid #3c3e42;
  background-size: cover;
  background-position: 50%;
  background-image: url('./src/sockr-modal-background.jpg');
}

#jamspace-modal {
  outline: 20em solid #3c3e42;
  background-image: url('https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/467064/1160/772/m1/fpnw/wm1/i0435-.jpg?1430378113&s=49e6a55f98b02e938593beadf51f7a9b');
}

